@@ -645,6 +645,25 @@ public:
         { return m_expander_column; }
 
     virtual wxDataViewColumn *GetSortingColumn() const = 0;
+    virtual wxVector<wxDataViewColumn *> GetSortingColumns() const
+    {
+        wxVector<wxDataViewColumn *> columns;
+        if ( wxDataViewColumn* col = GetSortingColumn() )
+            columns.push_back(col);
+        return columns;
+    }
+
+    // This must be overridden to return true if the control does allow sorting
+    // by more than one column, which is not the case by default.
+    virtual bool AllowMultiColumnSort(bool allow)
+    {
+        // We can still return true when disabling multi-column sort.
+        return !allow;
+    }
+
+    // This should also be overridden to actually use the specified column for
+    // sorting if using multiple columns is supported.
+    virtual void ToggleSortByColumn(int WXUNUSED(column)) { }
 
 
     // items management
